<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/result"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:text="@string/result"
        android:textSize="50sp"
        android:gravity="end|bottom"
        android:background="#efefef"
        android:padding="10dp"
        android:textColor="@color/black"
        android:textStyle="bold"
         />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1">

        <Button
            android:id= "@+id/btnSeven"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/_7"
            android:onClick="onDigitClick"
            android:padding="10dp"
            android:textSize="20sp"
            android:backgroundTint="@color/btnColor"
            android:layout_margin="2dp"
            tools:ignore="NestedWeights,UsingOnClickInXml" />

        <Button
            android:id= "@+id/btnEight"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/_8"
            android:onClick="onDigitClick"
            android:padding="10dp"
            android:textSize="20sp"
            android:backgroundTint="@color/btnColor"
            android:layout_margin="2dp"
            tools:ignore="UsingOnClickInXml" />

        <Button
            android:id= "@+id/btnNine"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/_9"
            android:onClick="onDigitClick"
            android:padding="10dp"
            android:textSize="20sp"
            android:backgroundTint="@color/btnColor"
            android:layout_margin="2dp"
            tools:ignore="UsingOnClickInXml" />

        <Button
            android:id= "@+id/btnDiv"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/divide"
            android:onClick="onOperator"
            android:padding="10dp"
            android:textSize="20sp"
            android:backgroundTint="@color/btnColor"
            android:layout_margin="2dp"
            tools:ignore="UsingOnClickInXml" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1">

        <Button
            android:id= "@+id/btnFour"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/_4"
            android:onClick="onDigitClick"
            android:padding="10dp"
            android:textSize="20sp"
            android:backgroundTint="@color/btnColor"
            android:layout_margin="2dp"
            tools:ignore="UsingOnClickInXml" />

        <Button
            android:id= "@+id/btnFive"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/_5"
            android:onClick="onDigitClick"
            android:padding="10dp"
            android:textSize="20sp"
            android:backgroundTint="@color/btnColor"
            android:layout_margin="2dp"

            tools:ignore="UsingOnClickInXml" />

        <Button
            android:id= "@+id/btnSix"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/_6"
            android:onClick="onDigitClick"
            android:padding="10dp"
            android:textSize="20sp"
            android:backgroundTint="@color/btnColor"
            android:layout_margin="2dp"
            tools:ignore="UsingOnClickInXml" />

        <Button
            android:id= "@+id/btnMultiply"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/multiply"
            android:onClick="onOperator"
            android:padding="10dp"
            android:textSize="20sp"
            android:backgroundTint="@color/btnColor"
            android:layout_margin="2dp"
            tools:ignore="UsingOnClickInXml" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1">

        <Button
            android:id= "@+id/btnOne"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/_1"
            android:onClick="onDigitClick"
            android:padding="10dp"
            android:textSize="20sp"
            android:backgroundTint="@color/btnColor"
            android:layout_margin="2dp"
            tools:ignore="UsingOnClickInXml" />

        <Button
            android:id= "@+id/btnTwo"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/_2"
            android:onClick="onDigitClick"
            android:padding="10dp"
            android:textSize="20sp"
            android:backgroundTint="@color/btnColor"
            android:layout_margin="2dp"

            tools:ignore="UsingOnClickInXml" />

        <Button
            android:id= "@+id/btnThree"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/_3"
            android:onClick="onDigitClick"
            android:padding="10dp"
            android:textSize="20sp"
            android:backgroundTint="@color/btnColor"
            android:layout_margin="2dp"
            tools:ignore="UsingOnClickInXml" />

        <Button
            android:id= "@+id/btnAdd"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/add"
            android:onClick="onOperator"
            android:padding="10dp"
            android:textSize="20sp"
            android:backgroundTint="@color/btnColor"
            android:layout_margin="2dp"
            tools:ignore="UsingOnClickInXml" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1">

        <Button
            android:id= "@+id/btnDecimal"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/dot"
            android:onClick="onDecimal"
            android:padding="10dp"
            android:textSize="20sp"
            android:backgroundTint="@color/btnColor"
            android:layout_margin="2dp"
            tools:ignore="UsingOnClickInXml" />

        <Button
            android:id= "@+id/btnZero"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/_0"
            android:onClick="onDigitClick"
            android:padding="10dp"
            android:textSize="20sp"
            android:backgroundTint="@color/btnColor"
            android:layout_margin="2dp"
            tools:ignore="UsingOnClickInXml" />

        <Button
            android:id= "@+id/btnCLR"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/clr"
            android:onClick="onClear"
            android:padding="10dp"
            android:textSize="20sp"
            android:backgroundTint="@color/btnColor"
            android:layout_margin="2dp"
            tools:ignore="UsingOnClickInXml" />

        <Button
            android:id= "@+id/btnSub"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/sub"
            android:onClick="onOperator"
            android:padding="10dp"
            android:textSize="20sp"
            android:backgroundTint="@color/btnColor"
            android:layout_margin="2dp"
            tools:ignore="UsingOnClickInXml" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1">

        <Button
            android:id= "@+id/btnEqual"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/equal"
            android:onClick="onDigitClick"
            android:padding="10dp"
            android:textSize="20sp"
            android:backgroundTint="@color/btnColor"
            android:layout_margin="2dp"
            tools:ignore="UsingOnClickInXml" />
    </LinearLayout>


</LinearLayout>
